# tascar

./: .arcconfig  .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Jenkinsfile  Jenkinsfile.differential  Makefile  README  README.md  README.windows  changelog  check_for_lsl  check_for_opencv2  check_for_opencv4  check_for_openmha  check_for_webkit  config.mk  contributors  files  get_version.sh  hoertechstorage.mk  plugins.cmake  release.md  rules.mk  start_from_repo.sh  tascar.sh  tascar_spkcalib.sh  version  version.cmake
apps/: Makefile
artwork/: logo.blend
cmake/: Config.cmake.in  FixAppleArchitecture.cmake
devkit/: Makefile  Makefile.fromrepo  README.md
doc/: .gitignore  Makefile  creator.dot  doxygen.cfg  fileformat_spec.docx  fileformat_spec.odt  filestructure.dot  plugins.cfg  render.dot  tascar.sty  tutorial0.tex  tutorial1.tex  tutorial2.tex  tutorial3.tex  tutorial4.tex  tutorial5.tex  tutorial6.tex  tutorial7.tex
examples/: 16ch.spk  Makefile  README_tutorials.txt  ap_dummy.tsc  audioplugins.tsc  chestorgan.tsc  datalogging.tsc  echoc.tsc  example1.tsc  example2.tsc  example3.tsc  example4.tsc  example_damping.tsc  example_datalogging_string.tsc  example_double_oscserver.tsc  example_masks.tsc  example_rating_of_multichannel_files.m  example_route.tsc  fbc.tsc  fdn_test.tsc  geopreset_and_simplecontroller.tsc  hannenv.tsc  headtracker.tsc  hoa2d_dec.tsc  jackstatus.tsc  l2osc.tsc  levelmeter.tsc  lightctl_raw.tsc  loopmachine.tsc  lsl.tsc  metronome_dispatchmsg.tsc  mididispatch_launchpad.tsc  mod_dummy.tsc  mono.spk  nsource.tsc  openmha_ap.tsc  osceog_datalogging.tsc  oscevents.tsc  oscheadtracking.tsc  osclist.tsc  (+25 more)
external_libs/: Makefile
gui/: Makefile
libtascar/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tascarver.h.in  version.cmake
libtascar/cmake/modules/: FindEigen3.cmake  FindFFTW.cmake  FindGTK3.cmake  FindGTKmm.cmake  FindGlib.cmake  FindGlibmm.cmake  FindJack.cmake  FindLibSamplerate.cmake  FindLibSndFile.cmake  FindLibXml++.cmake  FindLibXml++2.cmake  FindLibXmlpp.cmake  FindSigC++.cmake  Findliblo.cmake
libtascar/include/: acousticmodel.h  alsamidicc.h  amb33defs.h  async_file.h  audiochunks.h  audioplugin.h  audiostates.h  calibsession.h  cli.h  coordinates.h  defs.h  delayline.h  dmxdriver.h  dynamicobjects.h  errorhandling.h  fdn.h  fft.h  filterclass.h  gui_elements.h  hoa.h  irrender.h  jackclient.h  jackiowav.h  jackrender.h  levelmeter.h  licensehandler.h  maskplugin.h  nelmin.h  ola.h  optim.h  osc_helper.h  osc_scene.h  pdfexport.h  pluginprocessor.h  receivermod.h  render.h  ringbuffer.h  sampler.h  scene.h  serialport.h  (+18 more)
libtascar/libtascar/: Makefile  cmake_install.cmake  tascarConfig.cmake  tascarConfigVersion.cmake
libtascar/src/: acousticmodel.cc  acousticmodel.h  alsamidicc.cc  alsamidicc.h  amb33defs.h  async_file.cc  async_file.h  audiochunks.cc  audiochunks.h  audiochunks_unit_tests.cc  audioplugin.cc  audioplugin.h  audiostates.cc  audiostates.h  calibsession.cc  calibsession_unit_tests.cc  cli.cc  cli.h  coordinates.cc  coordinates.h  coordinates_unit_tests.cc  defs.h  delayline.cc  delayline.h  delayline_unit_tests.cc  dmxdriver.cc  dmxdriver.h  dynamicobjects.cc  dynamicobjects.h  errorhandling.cc  errorhandling.h  fdn.cc  fft.cc  fft.h  fft_unit_tests.cc  filterclass.cc  filterclass.h  filterclass_unit_tests.cc  gui_elements.cc  gui_elements.h  (+75 more)
libtascar/src/convhull_3d/: README.md  convhull_3d.h
libtascar/src/quickhull/: QuickHull.cpp
libtascar/src/quickhull/Structs/: Mesh.hpp
libtascar/src/quickhull/Tests/: CMakeLists.txt
libtascar/tascar.xcodeproj/: project.pbxproj
libtascar/tascar.xcodeproj/project.xcworkspace/xcuserdata/tobias.xcuserdatad/: UserInterfaceState.xcuserstate
libtascar/tascar.xcodeproj/xcuserdata/tobias.xcuserdatad/xcschemes/: xcschememanagement.plist
manual/: .gitignore  Makefile  acousticmodel.dot  actmodaccmovement.tex  actmodaccrotator.tex  actmodepicycles.tex  actmodgeopresets.tex  actmodjoystick.tex  actmodlinearmovement.tex  actmodlocationmodulator.tex  actmodlocationvelocity.tex  actmodlslactor.tex  actmodmotionpath.tex  actmodnearsensor.tex  actmodorientationmodulator.tex  actmodoscactor.tex  actmodoscheadtracker.tex  actmodovheadtracker.tex  actmodpendulum.tex  actmodpos2lsl.tex  actmodpos2osc.tex  actmodqualisystracker.tex  actmodrotator.tex  actmodserialheadtracker.tex  actmodsimplecontroller.tex  actmodskyfall.tex  actmodsnapangle.tex  actmodtracegui.tex  apmodallpass.tex  apmodbandlevel2osc.tex  apmodbandpass.tex  apmodconst.tex  apmoddelay.tex  apmodfeedbackdelay.tex  apmodfence.tex  apmodfilter.tex  apmodflanger.tex  apmodgain.tex  apmodgainramp.tex  apmodgate.tex  (+172 more)
plugins/: CMakeLists.txt  Makefile
plugins/plugins.xcodeproj/: project.pbxproj
plugins/plugins.xcodeproj/project.xcworkspace/xcuserdata/tobias.xcuserdatad/: UserInterfaceState.xcuserstate
plugins/plugins.xcodeproj/xcshareddata/xcschemes/: receivermod_hrtf.xcscheme
plugins/plugins.xcodeproj/xcuserdata/tobias.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/src/: datalogging.glade  glabsensor_emergency.cc  glabsensor_eog.cc  glabsensor_espheadtracker.cc  glabsensor_jackstatus.cc  glabsensor_midicc.cc  glabsensor_oscthreshold.cc  glabsensor_qualisys.cc  glabsensor_serial.cc  glabsensor_smiley.cc  glabsensor_trackir.cc  glabsensorplugin.cc  glabsensorplugin.h  glabsensors.glade  linuxtrack.c  linuxtrack.h  receivermod_amb1h0v.cc  receivermod_amb1h1v.cc  receivermod_amb3h0v.cc  receivermod_amb3h3v.cc  receivermod_cardioid.cc  receivermod_cardioidmod.cc  receivermod_chmap.cc  receivermod_debugpos.cc  receivermod_fakebf.cc  receivermod_foaconv.cc  receivermod_hann.cc  receivermod_hoa2d.cc  receivermod_hoa2d_fuma.cc  receivermod_hoa2d_fuma_hos.cc  receivermod_hoa3d.cc  receivermod_hoa3d_enc.cc  receivermod_hrtf.cc  receivermod_intensityvector.cc  receivermod_itu51.cc  receivermod_micarray.cc  receivermod_neukom_basic.cc  receivermod_neukom_inphase.cc  receivermod_nsp.cc  receivermod_omni.cc  (+142 more)
scripts/: .gitignore  CPU_load_measurement.m  airabsorptionfilter.m  (+98 more)
(+833 files in other folders)
